# solitario

./: AdmiContainers.cpp  AdmiContainers.h  AdmiGameSpaces.cpp  AdmiGameSpaces.h  AdmiMoves.cpp  AdmiMoves.h  Baraja.cpp  Baraja.h  CMakeLists.txt  Card.cpp  Card.h  CardPosition.cpp  CardPosition.h  Carta.cpp  Carta.h  CartaOrderException.h  Cola.h  Container.cpp  Container.h  GameSpace.cpp  GameSpace.h  LinkedList.h  Node.cpp  Node.h  Registro.cpp  Registro.h  Solitaire.cpp  Solitaire.h  Stack.cpp  Stack.h  Util.cpp  Util.h  gameSpace.cpp  gameSpace.h  main.cpp  makefile
ejecutable/: solitario
